/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.7.1/userguide/building_java_projects.html
 */

plugins {
	id 'java'
	id 'application'
	id 'org.openjfx.javafxplugin' version '0.0.10'
}

repositories {
	mavenCentral()
}

version = '0.1'

javafx {
	version = '16'
	modules = [ 'javafx.controls', 'javafx.graphics' ]
}
mainClassName = 'sa2emu/klfr.sa2emu.viewers.JavaFX_SA2Emulator'

java {
	modularity.inferModulePath = true
	toolchain.languageVersion = JavaLanguageVersion.of(17)
}

// fuck fuck fuck fuck fuck you encoding, for god's sake why won't java JUST USE UNICODE TRANSFORMATION FORMAT 8 ?????????
tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}
tasks.named('javadoc') {
	options.encoding = 'UTF-8'
}
compileJava {
	doFirst {
		System.out.println("KILL THE CACHE!!!!")
		// options.compilerArgs = [
		// 	'--module-path', classpath.asPath,
		// ]
		// classpath = files()
	}
	
	options.fork = true
	options.encoding = 'UTF-8'
}

run {
	// FUCK YOU JAVAFX PLUGIN
	jvmArgs = [
				'-Dfile.encoding=UTF-8', 
	// 			'--module-path', classpath.asPath,
	// 			'--add-modules', 'ALL-MODULE-PATH',
	]
}

tasks.named('run') {
	standardInput = System.in
}

// -module-path D:\Programmierprojekte\ToyCpuEmulator\build\classes\java\main;D:\Programmierprojekte\ToyCpuEmulator\build\resources\main;C:\Users\malub\.gradle\caches\modules-2\files-2.1\org.openjfx\javafx-controls\16\65cdeae29c67d25932dcc66ca4f7d269923631ba\javafx-controls-16-win.jar;C:\Users\malub\.gradle\caches\modules-2\files-2.1\org.openjfx\javafx-graphics\16\cd18f8477818b40cfdbcfec7e2fc15f632f0a2f\javafx-graphics-16-win.jar;C:\Users\malub\.gradle\caches\modules-2\files-2.1\org.openjfx\javafx-base\16\e0564fea3f27dd3a10fa62e5005612333fc244bc\javafx-base-16-win.jar --patch-module sa2emu=D:\Programmierprojekte\ToyCpuEmulator\build\resources\main --module sa2emu/klfr.sa2emu.viewers.JavaFX_SA2Emulator -Dfile.encoding=UTF-8 -Duser.country=DE -Duser.language=de -Duser.variant sa2emu/klfr.sa2emu.viewers.JavaFX_SA2Emulator
